--- a/index.html
+++ b/index.html
@@ -528,7 +528,7 @@
                                 </div>
                                 <div class="ml-3">
                                     <p class="text-sm font-medium text-gray-500 dark:text-gray-400">WhatsApp</p>
-                                    <a href="https://wa.me/15148674312" class="text-base text-gray-900 dark:text-white hover:text-primary-light dark:hover:text-primary-dark">+1 (514) 867-4312</a>
+                                    <a href="https://wa.me/13056102397" class="text-base text-gray-900 dark:text-white hover:text-primary-light dark:hover:text-primary-dark">+1 (305) 610-2397</a>
                                 </div>
                             </div>
                             
@@ -538,7 +538,7 @@
                                 </div>
                                 <div class="ml-3">
                                     <p class="text-sm font-medium text-gray-500 dark:text-gray-400">Location</p>
-                                    <p class="text-base text-gray-900 dark:text-white">Montreal, Canada</p>
+                                    <p class="text-base text-gray-900 dark:text-white">United States</p>
                                 </div>
                             </div>
                         </div>
@@ -611,11 +611,11 @@
                         </li>
                         <li class="flex items-start">
                             <i class="fab fa-whatsapp text-gray-500 dark:text-gray-400 mt-1 mr-2"></i>
-                            <a href="https://wa.me/15148674312" class="text-gray-600 dark:text-gray-300 hover:text-primary-light dark:hover:text-primary-dark">+1 (514) 867-4312</a>
+                            <a href="https://wa.me/13056102397" class="text-gray-600 dark:text-gray-300 hover:text-primary-light dark:hover:text-primary-dark">+1 (305) 610-2397</a>
                         </li>
                         <li class="flex items-start">
                             <i class="fas fa-map-marker-alt text-gray-500 dark:text-gray-400 mt-1 mr-2"></i>
-                            <span class="text-gray-600 dark:text-gray-300">Montreal, Canada</span>
+                            <span class="text-gray-600 dark:text-gray-300">United States</span>
                         </li>
                     </ul>
                 </div>
