--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
             <!-- Project 1 -->
             <div class="project-card relative rounded-xl overflow-hidden shadow-lg animate-fade-up animate-delay-200">
                 <div class="h-64 overflow-hidden">
-                    <img src="Onetchek.png" alt="Onetchek Project" class="w-full h-full object-cover transition-transform duration-500 hover:scale-110">
+                    <img src="Onetchek1.jpg" alt="Onetchek Project" class="w-full h-full object-cover transition-transform duration-500 hover:scale-110">
                 </div>
                 <div class="project-overlay absolute inset-0 bg-black/70 flex flex-col justify-center items-center opacity-0 p-6">
                     <h3 class="text-white text-xl font-bold mb-2">Onetchek</h3>
