--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@
             <!-- Project 2 -->
             <div class="project-card relative rounded-xl overflow-hidden shadow-lg animate-fade-up animate-delay-300">
                 <div class="h-64 overflow-hidden">
-                    <img src="https://images.unsplash.com/photo-1552664730-d307ca884978?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1200&q=80" alt="Ivonnia Project" class="w-full h-full object-cover transition-transform duration-500 hover:scale-110">
+                    <img src="Capture d’écran 2025-07-28 à 20.07.04.png" class="w-full h-full object-cover transition-transform duration-500 hover:scale-110">
                 </div>
                 <div class="project-overlay absolute inset-0 bg-black/70 flex flex-col justify-center items-center opacity-0 p-6">
                     <h3 class="text-white text-xl font-bold mb-2">Ivonnia</h3>
