--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@
                 <div class="flex-shrink-0 w-80 md:w-96 snap-center">
                     <div class="service-card p-5 rounded-xl">
                         <div class="h-52 rounded-lg overflow-hidden mb-4">
-                            <img src="onetchek.png">
+                            <img src="Onetchek1.jpg">
                         </div>
                         <h3 class="text-lg font-bold text-[#F8FAFC] mb-2">Onetchek</h3>
                         <p class="text-sm text-gray-300 mb-3">A decentralized neo-bank giving users full control over their money across currencies and borders.</p>
