--- a/index.html
+++ b/index.html
@@ -361,7 +361,7 @@
                 <div class="flex-shrink-0 w-80 md:w-96 snap-center">
                     <div class="service-card p-5 rounded-xl">
                         <div class="h-52 rounded-lg overflow-hidden mb-4">
-                            <img src="https://images.unsplash.com/photo-1559757148-5c350d0d3c56?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80" alt="Ivonnia" class="w-full h-full object-cover">
+                            <img src="Ivonnia.png">
                         </div>
                         <h3 class="text-lg font-bold text-[#F8FAFC] mb-2">Ivonnia</h3>
                         <p class="text-sm text-gray-300 mb-3">AI-powered QBank for medical exams, with adaptive learning and voice-based practice.</p>
@@ -373,7 +373,7 @@
                 <div class="flex-shrink-0 w-80 md:w-96 snap-center">
                     <div class="service-card p-5 rounded-xl">
                         <div class="h-52 rounded-lg overflow-hidden mb-4">
-                            <img src="https://images.unsplash.com/photo-1559526324-593bc073d938?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80" alt="KwikPey" class="w-full h-full object-cover">
+                            <img src="Kwikpey.png">
                         </div>
                         <h3 class="text-lg font-bold text-[#F8FAFC] mb-2">KwikPey</h3>
                         <p class="text-sm text-gray-300 mb-3">A fast and secure mobile wallet app for daily transactions in Haiti and the Caribbean.</p>
@@ -385,7 +385,7 @@
                 <div class="flex-shrink-0 w-80 md:w-96 snap-center">
                     <div class="service-card p-5 rounded-xl">
                         <div class="h-52 rounded-lg overflow-hidden mb-4">
-                            <img src="https://images.unsplash.com/photo-1551650975-87deedd944c3?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80" alt="Sitadel" class="w-full h-full object-cover">
+                            <img src="Sitadel.png">
                         </div>
                         <h3 class="text-lg font-bold text-[#F8FAFC] mb-2">Sitadel</h3>
                         <p class="text-sm text-gray-300 mb-3">A no-code/low-code platform to build mobile apps and websites without writing code.</p>
